CIRC-1827 incorporating review comments